--- a/package.xml
+++ b/package.xml
@@ -1,110 +1,113 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.4.2" 
-         version="2.0" 
-         xmlns="http://pear.php.net/dtd/package-2.0" 
-         xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-         xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0
-                             http://pear.php.net/dtd/tasks-1.0.xsd
-                             http://pear.php.net/dtd/package-2.0
-                             http://pear.php.net/dtd/package-2.0.xsd">
-    <name>Services_ShortURL</name>
+<package packagerversion="1.9.0" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0
+    http://pear.php.net/dtd/tasks-1.0.xsd
+    http://pear.php.net/dtd/package-2.0
+    http://pear.php.net/dtd/package-2.0.xsd">
+ <name>Services_ShortURL</name>
+ <channel>pear.php.net</channel>
+ <summary>Abstract PHP5 interface for shortening and expanding short URLs</summary>
+ <description>Short URL services have become enormously popular on the internet. There are, literally, dozens (hundreds?) of these services. Services_ShortURL offers an abstract way of shortening and expanding URLs.</description>
+ <lead>
+  <name>Bill Shupp</name>
+  <user>shupp</user>
+  <email>shupp@php.net</email>
+  <active>yes</active>
+ </lead>
+ <date>2009-10-23</date>
+ <time>09:59:02</time>
+ <version>
+  <release>0.1.0</release>
+  <api>0.1.0</api>
+ </version>
+ <stability>
+  <release>alpha</release>
+  <api>alpha</api>
+ </stability>
+ <license uri="http://www.opensource.org/licenses/bsd-license.php">New BSD License</license>
+ <notes>
+* initial release
+ </notes>
+ <contents>
+  <dir baseinstalldir="/" name="/">
+   <dir name="Services">
+    <dir name="ShortURL">
+     <dir name="Exception">
+      <file name="CouldNotExpand.php" role="php" />
+      <file name="CouldNotShorten.php" role="php" />
+      <file name="InvalidOptions.php" role="php" />
+      <file name="NotImplemented.php" role="php" />
+      <file name="UnknownService.php" role="php" />
+     </dir> <!-- /Services/ShortURL/Exception -->
+     <file name="Bitly.php" role="php" />
+     <file name="Common.php" role="php" />
+     <file name="Digg.php" role="php" />
+     <file name="Exception.php" role="php" />
+     <file name="Interface.php" role="php" />
+     <file name="Isgd.php" role="php" />
+     <file name="Shortie.php" role="php" />
+     <file name="TinyURL.php" role="php" />
+     <file name="Trim.php" role="php" />
+    </dir> <!-- /Services/ShortURL -->
+    <file name="ShortURL.php" role="php" />
+   </dir> <!-- /Services -->
+   <dir name="tests">
+    <dir name="Services">
+     <file name="ShortURLTest.php" role="test" />
+    </dir> <!-- /tests/Services -->
+    <file name="AllTests.php" role="test" />
+   </dir> <!-- /tests -->
+   <file name="README.textile" role="data" />
+  </dir> <!-- / -->
+ </contents>
+ <dependencies>
+  <required>
+   <php>
+    <min>5.0.0</min>
+   </php>
+   <pearinstaller>
+    <min>1.4.0b1</min>
+   </pearinstaller>
+   <package>
+    <name>PEAR</name>
     <channel>pear.php.net</channel>
-    <summary>Abstract PHP5 interface for shortening and expanding short URLs</summary>
-    <description>Short URL services have become enormously popular on the internet. There are, literally, dozens (hundreds?) of these services. Services_ShortURL offers an abstract way of shortening and expanding URLs.</description>
-    <lead>
-        <name>Joe Stump</name>
-        <user>jstump</user>
-        <email>joe@joestump.net</email>
-        <active>yes</active>
-    </lead>
-    <date>2009-04-24</date>
-    <version>
-        <release>0.0.1</release>
-        <api>0.0.1</api>
-    </version>
-    <stability>
-        <release>alpha</release>
-        <api>alpha</api>
-    </stability>
-    <license uri="http://www.opensource.org/licenses/bsd-license.php">New BSD License</license>
-    <notes><![CDATA[
-        * Initial release
-    ]]></notes>
-    <contents>
-        <dir name="/">
-            <dir name="Services">
-                <file name="ShortURL.php"
-                      role="php" />
-                <dir name="ShortURL">
-                    <file name="Bitly.php"
-                          role="php" />
-                    <file name="Common.php"
-                          role="php" />
-                    <file name="Digg.php"
-                          role="php" />
-                    <file name="Interface.php"
-                          role="php" />
-                    <file name="Isgd.php"
-                          role="php" />
-                    <file name="Shortie.php"
-                          role="php" />
-                    <file name="TinyURL.php"
-                          role="php" />
-                    <file name="Trim.php"
-                          role="php" />
-                    <file name="Exception.php"
-                          role="php" />
-                    <dir name="Exception">
-                        <file name="CouldNotShorten.php"
-                              role="php" />
-                        <file name="CouldNotExpand.php"
-                              role="php" />
-                        <file name="InvalidOptions.php"
-                              role="php" />
-                        <file name="NotImplemented.php"
-                              role="php" />
-                        <file name="UnknownService.php"
-                              role="php" />
-                    </dir>
-                </dir>
-            </dir>
-            <dir name="tests">
-                <file name="AllTests.php"
-                      role="test" />
-                <dir name="Services">
-                    <file name="ShortURLTest.php"
-                          role="test" />
-                </dir>
-            </dir>
-        </dir>
-    </contents>
-    <dependencies>
-        <required>
-            <php>
-                <min>5.1.0</min>
-            </php>
-            <pearinstaller>
-                <min>1.4.0b1</min>
-            </pearinstaller>
-            <package>
-                <name>HTTP_Request2</name>
-                <channel>pear.php.net</channel>
-                <min>0.3.0</min>
-            </package>
-            <package>
-                <name>Net_URL2</name>
-                <channel>pear.php.net</channel>
-                <min>0.2.0</min>
-            </package>
-            <package>
-                <name>Validate</name>
-                <channel>pear.php.net</channel>
-                <min>0.8.2</min>
-            </package>
-        </required>
-    </dependencies>
-    <phprelease />
-    <changelog>
-    </changelog>
+    <min>1.4.0</min>
+   </package>
+   <package>
+    <name>HTTP_Request2</name>
+    <channel>pear.php.net</channel>
+   </package>
+   <package>
+    <name>Net_URL2</name>
+    <channel>pear.php.net</channel>
+    <min>0.2.0</min>
+   </package>
+   <extension>
+    <name>SimpleXML</name>
+   </extension>
+   <extension>
+    <name>pcre</name>
+   </extension>
+   <extension>
+    <name>SPL</name>
+   </extension>
+  </required>
+ </dependencies>
+ <phprelease />
+ <changelog>
+  <release>
+   <version>
+    <release>0.1.0</release>
+    <api>0.1.0</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2009-10-23</date>
+   <license uri="http://www.opensource.org/licenses/bsd-license.php">New BSD License</license>
+   <notes>
+* initial release
+   </notes>
+  </release>
+ </changelog>
 </package>
