* Fixed #18184, added Googl driver by Hideyuki Shimooka * Prepped 0.3.0 release

--- a/package.xml
+++ b/package.xml
@@ -13,11 +13,11 @@
   <email>shupp@php.net</email>
   <active>yes</active>
  </lead>
- <date>2011-04-01</date>
- <time>09:27:24</time>
+ <date>2011-04-03</date>
+ <time>22:18:07</time>
  <version>
-  <release>0.2.0</release>
-  <api>0.2.0</api>
+  <release>0.3.0</release>
+  <api>0.3.0</api>
  </version>
  <stability>
   <release>alpha</release>
@@ -25,7 +25,7 @@
  </stability>
  <license uri="http://www.opensource.org/licenses/bsd-license.php">New BSD License</license>
  <notes>
-* Ken Guest updated the Bitly driver to work with v. 3 of their API, as well as added some validation
+* Fixes #18184 Added Googl driver from Hideyuki Shimooka
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -42,6 +42,7 @@
      <file name="Common.php" role="php" />
      <file name="Digg.php" role="php" />
      <file name="Exception.php" role="php" />
+     <file name="Googl.php" role="php" />
      <file name="Interface.php" role="php" />
      <file name="Isgd.php" role="php" />
      <file name="Shortie.php" role="php" />
@@ -122,6 +123,21 @@
    <license uri="http://www.opensource.org/licenses/bsd-license.php">New BSD License</license>
    <notes>
 * Ken Guest updated the Bitly driver to work with v. 3 of their API, as well as added some validation
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.3.0</release>
+    <api>0.3.0</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2011-04-03</date>
+   <license uri="http://www.opensource.org/licenses/bsd-license.php">New BSD License</license>
+   <notes>
+* Fixes #18184 Added Googl driver from Hideyuki Shimooka
    </notes>
   </release>
  </changelog>
