--- a/package.xml
+++ b/package.xml
@@ -13,11 +13,11 @@
   <email>shupp@php.net</email>
   <active>yes</active>
  </lead>
- <date>2011-04-03</date>
- <time>22:18:07</time>
+ <date>2011-04-05</date>
+ <time>11:09:00</time>
  <version>
-  <release>0.3.0</release>
-  <api>0.3.0</api>
+  <release>0.3.1</release>
+  <api>0.3.1</api>
  </version>
  <stability>
   <release>alpha</release>
@@ -25,7 +25,7 @@
  </stability>
  <license uri="http://www.opensource.org/licenses/bsd-license.php">New BSD License</license>
  <notes>
-* Fixes #18184 Added Googl driver from Hideyuki Shimooka
+* Added missing map for Googl driver
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -138,6 +138,21 @@
    <license uri="http://www.opensource.org/licenses/bsd-license.php">New BSD License</license>
    <notes>
 * Fixes #18184 Added Googl driver from Hideyuki Shimooka
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.3.1</release>
+    <api>0.3.1</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2011-04-05</date>
+   <license uri="http://www.opensource.org/licenses/bsd-license.php">New BSD License</license>
+   <notes>
+* Added missing map for Googl driver
    </notes>
   </release>
  </changelog>
